// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
  disabled={false}
  id={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 esKlPI Control__SegmentButton-sc-37ejc4-0 uKdKR"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 egoClY"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Rent
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 egoClY"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Buy
      </label>
    </section>
  </button>
</section>
`;

exports[` 2`] = `
Array [
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 fdqEyn"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <section
        className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
        disabled={false}
        id={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Rent
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Buy
            </label>
          </section>
        </button>
      </section>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-icfo76-2 cvBNlB"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 cyOOXv"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 jGFUDO"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 bKkRmK"
    >
      <section
        className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
        disabled={false}
        id={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Rent
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Buy
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Sell
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Short-term lease
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 egoClY"
              cursor="pointer"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Long-term lease
            </label>
          </section>
        </button>
      </section>
    </div>
  </div>,
]
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq"
  id={null}
  rows={null}
>
  <section
    className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 esKlPI Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Selected option
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 deIksf Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Disabled Option
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Unselected Option
        </label>
      </section>
    </button>
  </section>
  <section
    className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
    disabled={true}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 ePZSPs Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Selected option
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 deIksf Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Disabled Option
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 deIksf Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Unselected Option
        </label>
      </section>
    </button>
  </section>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gKPNdq"
  id={null}
  rows={null}
>
  <section
    className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          List View
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 depbCu Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Map View
        </label>
      </section>
    </button>
  </section>
  <section
    className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ljDbLq Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-list-ul fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="list-ul"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 368a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0-160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0-160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm448 24H176a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V88a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          List View
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ljDbLq Button__LabelWrapper-sc-1v7sls2-1 jRUqJu"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-map fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="map"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M560.02 32c-1.96 0-3.98.37-5.96 1.16L384.01 96H384L212 35.28A64.252 64.252 0 0 0 191.76 32c-6.69 0-13.37 1.05-19.81 3.14L20.12 87.95A32.006 32.006 0 0 0 0 117.66v346.32C0 473.17 7.53 480 15.99 480c1.96 0 3.97-.37 5.96-1.16L192 416l172 60.71a63.98 63.98 0 0 0 40.05.15l151.83-52.81A31.996 31.996 0 0 0 576 394.34V48.02c0-9.19-7.53-16.02-15.98-16.02zM224 90.42l128 45.19v285.97l-128-45.19V90.42zM48 418.05V129.07l128-44.53v286.2l-.64.23L48 418.05zm480-35.13l-128 44.53V141.26l.64-.24L528 93.95v288.97z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <label
          className="Typography__StyledLabel-sc-19auepv-0 egoClY"
          cursor="pointer"
          fontSize="1rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Map View
        </label>
      </section>
    </button>
  </section>
  <section
    className="Control__ControlWrapper-sc-37ejc4-1 gYjudd"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ljDbLq Button__LabelWrapper-sc-1v7sls2-1 hVlHbn"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-list-ul fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="list-ul"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 368a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0-160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm0-160a48 48 0 1 0 48 48 48 48 0 0 0-48-48zm448 24H176a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V88a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v16a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-16a16 16 0 0 0-16-16z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 crOShH Control__SegmentButton-sc-37ejc4-0 uKdKR"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ljDbLq Button__LabelWrapper-sc-1v7sls2-1 hVlHbn"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-map fa-w-18 Icon__StyledIcon-sc-1oa9m1v-1 crFXws"
          color={null}
          data-icon="map"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M560.02 32c-1.96 0-3.98.37-5.96 1.16L384.01 96H384L212 35.28A64.252 64.252 0 0 0 191.76 32c-6.69 0-13.37 1.05-19.81 3.14L20.12 87.95A32.006 32.006 0 0 0 0 117.66v346.32C0 473.17 7.53 480 15.99 480c1.96 0 3.97-.37 5.96-1.16L192 416l172 60.71a63.98 63.98 0 0 0 40.05.15l151.83-52.81A31.996 31.996 0 0 0 576 394.34V48.02c0-9.19-7.53-16.02-15.98-16.02zM224 90.42l128 45.19v285.97l-128-45.19V90.42zM48 418.05V129.07l128-44.53v286.2l-.64.23L48 418.05zm480-35.13l-128 44.53V141.26l.64-.24L528 93.95v288.97z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
  </section>
</section>
`;
